--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!doctype html>
 <html>
 <head>
-    <title>Pathway map test</title>
+    <title>Pathway map test - dagre</title>
 
-    <link href="style.css" rel="stylesheet" />
-    <script src="cytoscape.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+
+
+    <script src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
     <script src="base_script.js"></script>
-    <script src="rasPathwayElements.js"></script>
+    <script src="model.js"></script>
 
     <script src="https://cdn.rawgit.com/cpettitt/dagre/v0.7.4/dist/dagre.min.js"></script>
     <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-dagre/1.1.2/cytoscape-dagre.js"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.min.css" rel="stylesheet" type="text/css" />
+    <script src="http://marvl.infotech.monash.edu/webcola/cola.v3.min.js"></script>
+    <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cola/1.4.3/cytoscape-cola.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.css">
     <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-qtip/2.2.5/cytoscape-qtip.js"></script>
 
-    <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
 
-    <!-- <script src=""></script> -->
+
+  <!-- <script src=""></script> -->
 </head>
+
 
 <style>
     #cy {
@@ -29,9 +37,25 @@
         top: 0px;
         left: 0px;
     }
+
+    /*#cy {
+      border: solid;
+      border-width: 1;
+      height: 100%;
+    }*/
+
 </style>
 
 <body>
-    <div id="cy"></div>
+
+
+<div id="cy"</div>
+
+
+
+
+
+
+
 </body>
 </html>
