--- a/index.html
+++ b/index.html
@@ -35,27 +35,41 @@
     <!-- CSS -->
     <link href="style.css" rel="stylesheet" type="text/css" />
 
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </head>
 
 
-<style>
-    #cy {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-    }
-
-
-
-</style>
 
 <body>
 
+    <h1>pathway_map demo</h1>
+    <!-- container-fluid : start -->
+    <div class="container-fluid">
+      <div class="row">
 
-<div id="cy"</div>
+        <div class="col-sm-4">
+
+
+        </div>
+        <div class="col-sm-8">
+
+          <!-- graph : start -->
+          <h5>Graph</h5>
+              <div id="cy-container">
+                <div id="cy"></div>
+              </div>
+
+          <!-- graph : end -->
+
+        </div>
+
+
+      </div>
+    </div>
+    <!-- container-fluid : end -->
 
 
 
