--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
 
         <div class="col-sm-4">
 
+  <form id="inputForm">
+  <div class="form-group">
+
+  <div class="form-group">
+    <label for="mechanismText">Describe your mechanism</label>
+    <textarea class="form-control" id="mechanismText" rows="20"></textarea>
+  </div>
+
+  <div class="form-group">
+    <label for="mechanismText">CCLE cell line</label>
+    <textarea class="form-control" id="mechanismText" rows="1"></textarea>
+  </div>
+
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+
+
+
+
+
+
+
+
+
+
+
 
         </div>
         <div class="col-sm-8">
