Switch to loading assets from json vs js
Load from json as opposed to js
Currently loading cell_dict.json synchronously
Will make this async later

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- model output from cyjs_assembler -->
     <script src="model.js"></script>
     <!-- script that executes visualiation -->
-    <script src="cell_dict.js"></script>
+    <script src="http://pathway-map.surge.sh/cell_dict.js"></script>
 
     <!-- LAYOUTS -->
     <!-- dagre layout-->
