--- a/index.html
+++ b/index.html
@@ -59,14 +59,8 @@
       <div class="row">
 
         <div class="col-sm-4">
-
-          <select id='cellSelect' class="selectpicker">
-
-          </select>
-          <div>
-            <button id'loadButton' type="submit" class="btn btn-primary">Load</button>
-          </div>
-
+          <select id='cellSelect' class="selectpicker"></select>
+          <button id='loadButton' type="submit" class="btn btn-primary">Load</button>
         </div>
 
 
