Host libraries locally due to http cdns

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- cytsoscape.js -->
-    <script src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
+    <script src="cytoscape.min.js"></script>
 
     <!-- MODEL -->
     <!-- script that executes visualiation -->
@@ -23,7 +23,7 @@
     <!-- cytoscape.js extension for dagre layout -->
     <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-dagre/1.1.2/cytoscape-dagre.js"></script>
     <!-- cola physics-based layout -->
-    <script src="http://marvl.infotech.monash.edu/webcola/cola.v3.min.js"></script>
+    <script src="cola.v3.min.js"></script>
     <!-- cytoscape.js extension for cola layout -->
     <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cola/1.4.3/cytoscape-cola.js"></script>
 
@@ -42,9 +42,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
     <!-- Latest compiled and minified JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
 
 
 </head>
