--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Pathway map test</title>
+    <title>INDRA Interactive Map</title>
     <!-- CSS -->
     <link href="static/style.css" rel="stylesheet" type="text/css" />
 
@@ -38,22 +38,29 @@
 
 <body>
 
-    <h1>pathway map demo</h1>
+    <h1><img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img> INDRA </h1>
+    <h4>Integrated Network and Dynamical Reasoning Assembler </h4>
     <!-- container-fluid : start -->
     <div class="container-fluid">
       <div class="row">
 
         <div class="col-sm-4">
+          <h5>Input</h5>
           <form>
   <div class="form-group">
     <label for="textArea">Describe your mechanism.</label>
-    <textarea class="form-control" id="textArea" rows="3"></textarea>
+    <textarea class="form-control" id="textArea" rows="25" placeholder="HRAS, NRAS and KRAS activate ARAF, BRAF and RAF1."></textarea>
   </div>
 
 </form>
-
-
+          <div class="form-group">
+          <div>
+          <label for="cellSelect">Choose a cell line.</label>
+        </div>
+        <div>
           <select id='cellSelect' class="selectpicker"></select>
+        </div>
+        </div>
           <button id='loadButton' type="submit" class="btn btn-primary">Load</button>
         </div>
 
