More mobile-friendly
Edited bootstrap layout to render a more mobile-friendly layout. On a computer
with adequate screen width the text input and cell line picker are rendered
side by side. On a mobile device they are rendered on top of each other.

Also added touch specific callbacks that make interacting with the map on a mobile device more responsive. Previously only click callbacks were in action.

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     <div class="container-fluid">
 
     <div class=row>
-        <div class="col-xs-4">
+        <div class="col-md-4">
             <h1><img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img> INDRA </h1>
             <h5>Integrated Network and Dynamical Reasoning Assembler </h5>
         </div>
     </div>
 
     <div class=row>
-      <div class="col-xs-4">
+      <div class="col-md-4">
 
         <ul class="nav nav-tabs">
           <li class="active"><a data-toggle="tab" href="#ras227">McCormick Map</a></li>
@@ -92,7 +92,7 @@
 
 
     </div>
-    <div class="col-sm-8">
+    <div class="col-md-8">
 
       <!-- graph : start -->
       <!-- <h5>Graph</h5> -->
