--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <!-- graph : start -->
       <!-- <h5>Graph</h5> -->
           <div id="cy-container">
-            <div id="cy_1" class="cy"></div>
+            <div id="cy_1" class="cy" data-url="static/cyjs/model_A101D_SKIN.json"></div>
           </div>
     <!-- graph : end -->
 
