Add jupyter notebook for models with expression

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <!-- graph : start -->
       <!-- <h5>Graph</h5> -->
-          <div id="cy-container">
+          <div id="cy-container" class="cy-container">
             <div id="cy_1" class="cy" data-url="static/cyjs/model_A101D_SKIN.json"></div>
           </div>
     <!-- graph : end -->
