--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="static/bower_components/qtip2/jquery.qtip.min.css" />
     <link rel="stylesheet" href="static/bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="static/bower_components/bootstrap-select/dist/css/bootstrap-select.css" />
+    <link rel="stylesheet" href="static/bower_components/cytoscape-panzoom/cytoscape.js-panzoom.css" />
+    <link rel="stylesheet" href="static/bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- bower:js -->
     <script src="static/bower_components/jquery/dist/jquery.js"></script>
@@ -26,6 +28,7 @@
     <script src="static/bower_components/cytoscape-qtip/cytoscape-qtip.js"></script>
     <script src="static/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="static/bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
+    <script src="static/bower_components/cytoscape-panzoom/cytoscape-panzoom.js"></script>
     <!-- endbower -->
 
     <!-- script that executes visualiation -->
