--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <ul class="nav nav-tabs">
           <li class="active"><a data-toggle="tab" href="#ras227">McCormick Map</a></li>
           <li ><a data-toggle="tab" href="#byom">BYOM</a></li>
+          <li ><a data-toggle="tab" href="#about">About</a></li>
         </ul>
 
           <div id="left_half" >
@@ -88,6 +89,27 @@
                             </div>
                         </div>
                         <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
+                  </div>
+              </div>
+              <div id="about" class="tab-pane fade in">
+
+                  <div >
+                    <h5>How do I read this map?</h5>
+                    <ul>
+                        <li>Nodes represent pathway elements.</li>
+                        <li>Nodes that are subdivided into pie charts represent families.</li>
+                        <li>Wild-type genes are colored <font color="green">green.</font></li>
+                        <li>Mutated genes are colored <font color="orange">orange.</font></li>
+                        <li>The intensity of each color corresponds to the expression level of a gene in CCLE.</li>
+                        <li>Clicking a node provides additional context via CiteAb, HGNC, and UniProt.</li>
+                    </ul>
+                    <h5>How does this work?</h5>
+                    <ul>
+                        <li>All models are generated using <a href="https://github.com/sorgerlab/indra">INDRA</a> developed by the <a href="http://hits.harvard.edu/the-program/laboratory-of-systems-pharmacology/about/">Laboratory of Systems Pharmacology</a> at Harvard Medical School.</li>
+                        <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona.</li>
+                        <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
+
+                    </ul>
                   </div>
               </div>
             </div>
