Add fxn and buttons for downloading model

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
                                 <select id='cellSelectDynamic' class="selectpicker"></select>
                             </div>
                         </div>
-                        <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
+                        <div>
+                            <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
+                            <button id='downloadINDRA' type="submit" class="btn btn-primary">Download INDRA statments</button>
+                            <button id='downloadPySB' type="submit" class="btn btn-primary">Download PySB</button>
+                        </div>
                   </div>
               </div>
               <div id="about" class="tab-pane fade in">
