Add loopy capability

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     </div>
                 </div>
                 <button id='loadButtonStatic' type="submit" class="btn btn-primary">Load</button>
+                <button id='cyjs2loopyStatic' type="submit" class="btn btn-primary cyjs2loopy">cyjs2Loopy</button>
               </div>
 
               <div id="byom" class="tab-pane fade in">
@@ -105,6 +106,8 @@
                             <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
                             <button id='downloadINDRA' type="submit" class="btn btn-primary">Download INDRA statments</button>
                             <button id='downloadPySB' type="submit" class="btn btn-primary">Download PySB</button>
+                            <button id='INDRA2loopy' type="submit" class="btn btn-primary">INDRA2Loopy</button>
+                            <button id='cyjs2loopyDynamic' type="submit" class="btn btn-primary cyjs2loopy">cyjs2Loopy</button>
                         </div>
                   </div>
               </div>
