--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <button id='loadButtonStatic' type="submit" class="btn btn-primary">Load</button>
-                <button id='cyjs2loopyStatic' type="submit" class="btn btn-primary cyjs2loopy">cyjs2Loopy</button>
+                <button id='cyjs2loopyStatic' type="submit" class="btn btn-success cyjs2loopy" disabled>cyjs2Loopy</button>
               </div>
 
               <div id="byom" class="tab-pane fade in">
@@ -90,7 +90,7 @@
                     <form>
                         <div class="form-group">
                           <label for="textArea">Describe your mechanism.</label>
-                          <textarea class="form-control" id="textArea" rows="20" placeholder="HRAS, NRAS and KRAS activate ARAF, BRAF and RAF1."></textarea>
+                          <textarea class="form-control" id="textArea" rows="15" placeholder="HRAS, NRAS and KRAS activate ARAF, BRAF and RAF1."></textarea>
                         </div>
 
                      </form>
@@ -102,12 +102,14 @@
                                 <select id='cellSelectDynamic' class="selectpicker"></select>
                             </div>
                         </div>
-                        <div>
+                        <div class= 'btn-div'>
                             <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
-                            <button id='downloadINDRA' type="submit" class="btn btn-primary">Download INDRA statments</button>
-                            <button id='downloadPySB' type="submit" class="btn btn-primary">Download PySB</button>
-                            <button id='INDRA2loopy' type="submit" class="btn btn-primary">INDRA2Loopy</button>
-                            <button id='cyjs2loopyDynamic' type="submit" class="btn btn-primary cyjs2loopy">cyjs2Loopy</button>
+                            <button id='cyjs2loopyDynamic' type="submit" class="btn btn-success cyjs2loopy" disabled>cyjs2Loopy</button>
+                        </div>
+                        <div class='btn-div'>
+                            <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
+                            <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button>
+                            <!-- <button id='INDRA2loopy' type="submit" class="btn btn-primary">INDRA2Loopy</button> -->
                         </div>
                   </div>
               </div>
