--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class= 'btn-div'>
                             <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
-                            <button id='presetLayoutDynamic' type="submit" class="btn btn-default active presetLayout">Preset layout</button>
+                            <button id='presetLayoutDynamic' type="submit" class="btn btn-default presetLayout">Preset layout</button>
                             <button id='cyjs2loopyDynamic' type="submit" class="btn btn-success cyjs2loopy" disabled>cyjs2Loopy</button>
                         </div>
                         <div class='btn-div'>
