Add reference to loopy in About tab.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <li>All models are generated using <a href="https://github.com/sorgerlab/indra">INDRA</a> developed by the <a href="http://hits.harvard.edu/the-program/laboratory-of-systems-pharmacology/about/">Laboratory of Systems Pharmacology</a> at Harvard Medical School.</li>
                         <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona.</li>
                         <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
-
+                        <li><a href="http://ncase.me/loopy/">Loopy</a> is a qualitative modeling tool for creating interactive simulations.</li>
                     </ul>
                   </div>
               </div>
