--- a/index.html
+++ b/index.html
@@ -60,87 +60,103 @@
     </div>
 
     <div class=row>
-      <div class="col-md-4">
+      <div class='col-md-12'>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" data-toggle="modal" data-target="#menu"> Menu </span>
+        </button>
 
-        <ul class="nav nav-tabs">
-          <li class="active"><a data-toggle="tab" href="#ras227">McCormick Map</a></li>
-          <li ><a data-toggle="tab" href="#byom">BYOM</a></li>
-          <li ><a data-toggle="tab" href="#about">About</a></li>
-        </ul>
 
-          <div id="left_half" >
-            <div class="tab-content">
-              <div id="ras227" class="tab-pane fade in active">
-                <div class="form-group">
-                    <div>
-                        <label for="cellSelectStatic">Choose a cell line.</label>
+
+        <!-- Modal -->
+        <div class="modal fade" id="menu" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-body">
+                  <div class="tabbable">
+                  <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#ras227">McCormick Map</a></li>
+                    <li ><a data-toggle="tab" href="#byom">BYOM</a></li>
+                    <li ><a data-toggle="tab" href="#about">About</a></li>
+                  </ul>
+
+                <div class="tab-content">
+                  <div id="ras227" class="tab-pane fade in active">
+                    <div class="form-group">
+                        <div>
+                            <label for="cellSelectStatic">Choose a cell line.</label>
+                        </div>
+                        <div>
+                            <select id='cellSelectStatic' class="selectpicker"></select>
+                        </div>
                     </div>
-                    <div>
-                        <select id='cellSelectStatic' class="selectpicker"></select>
-                    </div>
+                    <button id='loadButtonStatic' type="submit" class="btn btn-primary">Load</button>
+                    <button id='cyjs2loopyStatic' type="submit" class="btn btn-success cyjs2loopy" disabled>cyjs2Loopy</button>
+                  </div>
+
+                  <div id="byom" class="tab-pane fade in">
+                      <div>
+                        <h5>Input</h5>
+                        <form>
+                            <div class="form-group">
+                              <label for="textArea">Describe your mechanism.</label>
+                              <textarea class="form-control" id="textArea" rows="15" placeholder="HRAS, NRAS and KRAS activate ARAF, BRAF and RAF1."></textarea>
+                            </div>
+
+                         </form>
+                            <div class="form-group">
+                                <div>
+                                    <label for="cellSelectDynamic">Choose a cell line.</label>
+                                </div>
+                                <div>
+                                    <select id='cellSelectDynamic' class="selectpicker"></select>
+                                </div>
+                            </div>
+                            <div class= 'btn-div'>
+                                <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
+                                <button id='presetLayoutDynamic' type="submit" class="btn btn-default presetLayout">Preset layout</button>
+                                <button id='cyjs2loopyDynamic' type="submit" class="btn btn-success cyjs2loopy" disabled>cyjs2Loopy</button>
+                            </div>
+                            <div class='btn-div'>
+                                <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
+                                <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button>
+                                <!-- <button id='INDRA2loopy' type="submit" class="btn btn-primary">INDRA2Loopy</button> -->
+                            </div>
+                      </div>
+                  </div>
+                  <div id="about" class="tab-pane fade in">
+                      <div >
+                        <h5>How do I read this map?</h5>
+                        <ul>
+                            <li>Nodes represent pathway elements.</li>
+                            <li>Nodes that are subdivided into pie charts represent families.</li>
+                            <li>Wild-type genes are colored <font color="green">green.</font></li>
+                            <li>Mutated genes are colored <font color="orange">orange.</font></li>
+                            <li>The intensity of each color corresponds to the expression level of a gene in CCLE.</li>
+                            <li>Clicking a node provides additional context via CiteAb, HGNC, and UniProt.</li>
+                        </ul>
+                        <h5>How does this work?</h5>
+                        <ul>
+                            <li>All models are generated using <a href="https://github.com/sorgerlab/indra">INDRA</a> developed by the <a href="http://hits.harvard.edu/the-program/laboratory-of-systems-pharmacology/about/">Laboratory of Systems Pharmacology</a> at Harvard Medical School.</li>
+                            <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona.</li>
+                            <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
+                            <li><a href="http://ncase.me/loopy/">Loopy</a> is a qualitative modeling tool for creating interactive simulations.</li>
+                        </ul>
+                      </div>
+                  </div>
                 </div>
-                <button id='loadButtonStatic' type="submit" class="btn btn-primary">Load</button>
-                <button id='cyjs2loopyStatic' type="submit" class="btn btn-success cyjs2loopy" disabled>cyjs2Loopy</button>
+
               </div>
-
-              <div id="byom" class="tab-pane fade in">
-
-                  <div >
-                    <h5>Input</h5>
-                    <form>
-                        <div class="form-group">
-                          <label for="textArea">Describe your mechanism.</label>
-                          <textarea class="form-control" id="textArea" rows="15" placeholder="HRAS, NRAS and KRAS activate ARAF, BRAF and RAF1."></textarea>
-                        </div>
-
-                     </form>
-                        <div class="form-group">
-                            <div>
-                                <label for="cellSelectDynamic">Choose a cell line.</label>
-                            </div>
-                            <div>
-                                <select id='cellSelectDynamic' class="selectpicker"></select>
-                            </div>
-                        </div>
-                        <div class= 'btn-div'>
-                            <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
-                            <button id='presetLayoutDynamic' type="submit" class="btn btn-default presetLayout">Preset layout</button>
-                            <button id='cyjs2loopyDynamic' type="submit" class="btn btn-success cyjs2loopy" disabled>cyjs2Loopy</button>
-                        </div>
-                        <div class='btn-div'>
-                            <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
-                            <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button>
-                            <!-- <button id='INDRA2loopy' type="submit" class="btn btn-primary">INDRA2Loopy</button> -->
-                        </div>
-                  </div>
-              </div>
-              <div id="about" class="tab-pane fade in">
-
-                  <div >
-                    <h5>How do I read this map?</h5>
-                    <ul>
-                        <li>Nodes represent pathway elements.</li>
-                        <li>Nodes that are subdivided into pie charts represent families.</li>
-                        <li>Wild-type genes are colored <font color="green">green.</font></li>
-                        <li>Mutated genes are colored <font color="orange">orange.</font></li>
-                        <li>The intensity of each color corresponds to the expression level of a gene in CCLE.</li>
-                        <li>Clicking a node provides additional context via CiteAb, HGNC, and UniProt.</li>
-                    </ul>
-                    <h5>How does this work?</h5>
-                    <ul>
-                        <li>All models are generated using <a href="https://github.com/sorgerlab/indra">INDRA</a> developed by the <a href="http://hits.harvard.edu/the-program/laboratory-of-systems-pharmacology/about/">Laboratory of Systems Pharmacology</a> at Harvard Medical School.</li>
-                        <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona.</li>
-                        <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
-                        <li><a href="http://ncase.me/loopy/">Loopy</a> is a qualitative modeling tool for creating interactive simulations.</li>
-                    </ul>
-                  </div>
               </div>
             </div>
           </div>
+        </div>
 
+      </div>
+  </div>
 
-    </div>
-    <div class="col-md-8">
+  <div class="row">
+    <div class="col-md-12">
 
       <!-- graph : start -->
       <!-- <h5>Graph</h5> -->
@@ -148,11 +164,9 @@
             <div id="cy_1" class="cy" data-url="static/cyjs/model_A101D_SKIN.json"></div>
           </div>
     <!-- graph : end -->
-
   </div>
   </div>
-
-
+  </div>
     <!-- container-fluid : end -->
 </body>
 </html>
