--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <!-- google analytics -->
     <script src="static/base_script.js"></script>
+    <script src="static/drawCytoscape.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -63,13 +64,13 @@
       <div class='col-md-12'>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-default btn-lg">
-            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" data-toggle="modal" data-target="#menu"> Menu </span>
+            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" data-toggle="modal" data-target="#menu"></span>
         </button>
 
 
 
         <!-- Modal -->
-        <div class="modal fade" id="menu" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal" id="menu" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-body">
@@ -162,7 +163,7 @@
       <!-- <h5>Graph</h5> -->
           <div id="cy-container" class="cy-container">
             <div id="cy_1" class="cy" data-url="static/cyjs/model_A101D_SKIN.json"></div>
-          </div>
+        </div>
     <!-- graph : end -->
   </div>
   </div>
