Move loopyFromCyJS out of base_script

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="static/base_script.js"></script>
     <script src="static/drawCytoscape.js"></script>
     <script src="static/requests_APIs.js"></script>
+    <script src="static/loopyFromCyJS.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
