--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
     <script src="static/bower_components/cytoscape-panzoom/cytoscape-panzoom.js"></script>
     <!-- endbower -->
 
-    <!-- script that executes visualiation -->
+    <!-- js -->
+    <script src="static/js/base_script.js"></script>
+    <script src="static/js/drawCytoscape.js"></script>
+    <script src="static/js/requests_APIs.js"></script>
+    <script src="static/js/loopyFromCyJS.js"></script>
+    <!-- js -->
+
+
 
     <!-- google analytics -->
-    <script src="static/base_script.js"></script>
-    <script src="static/drawCytoscape.js"></script>
-    <script src="static/requests_APIs.js"></script>
-    <script src="static/loopyFromCyJS.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
