Give credit to colorbrewer2

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                             <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona.</li>
                             <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
                             <li><a href="http://ncase.me/loopy/">Loopy</a> is a qualitative modeling tool for creating interactive simulations.</li>
+                            <li><a href="http://www.colorbrewer2.org">Colorbrewer2</a> provides all the colorscales used to contextualize nodes.</li>
                         </ul>
                       </div>
                   </div>
