--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="static/bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
     <script src="static/bower_components/cytoscape-panzoom/cytoscape-panzoom.js"></script>
     <script src="static/bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
+    <script src="static/bower_components/papaparse/papaparse.js"></script>
     <!-- endbower -->
 
     <!-- js -->
