Separate contextualization/qtipping of nodes
- nodes colored by contextualizeNodes() and given qtips by qtipNodes()

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="static/colorbrewer/colorbrewer.js"></script>
     <script src="static/js/drawCytoscape.js"></script>
     <script src="static/js/contextualizeNodes.js"></script>
+    <script src="static/js/qtipNodes.js"></script>
     <script src="static/js/requests_APIs.js"></script>
     <script src="static/js/loopyFromCyJS.js"></script>
     <script src="static/js/base_script.js"></script>
