Add Ability to highlight paths through the network
Initial commit of path-highlighting capability. Given a list of uuids, make
every node and edge that does not have those uuids transparent. This reveals
the path through the network.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="static/js/drawCytoscape.js"></script>
     <script src="static/js/contextualizeNodes.js"></script>
     <script src="static/js/qtipNodes.js"></script>
+    <script src="static/js/highlightPath.js"></script>
     <script src="static/js/requests_APIs.js"></script>
     <script src="static/js/loopyFromCyJS.js"></script>
     <script src="static/js/base_script.js"></script>
