--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <div class=row>
       <div class='col-md-12'>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-default btn-lg">
-            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" data-toggle="modal" data-target="#menu"></span>
+        <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#menu">
+            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
         </button>
 
 
