--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#menu">
             <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+            <b>MODEL OPTIONS</b>
         </button>
 
 
