Contextualize model according to phospho data
- Takes in a phospho dataset which has log2 transformed values keyed to named
  nodes and their members. Nodes are the proteins themselves, while the
  members are their phosphosites.
- Phospho increases/decreases are visualized on a colorscale
- Protein abundnances are visualized on a colorscale changing the border style
  if the style param is set to 'borders'
- Protein abunances are visualized as size changes (in the linear dimension
  of each node according to the fold change if style is set to 'sizes'
- Colorscale requires d3

--- a/index.html
+++ b/index.html
@@ -33,11 +33,21 @@
     <script src="static/bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
     <script src="static/bower_components/papaparse/papaparse.js"></script>
     <!-- endbower -->
-
+    <!-- d3 -->
+    <script src="https://d3js.org/d3-array.v1.min.js"></script>
+    <script src="https://d3js.org/d3-collection.v1.min.js"></script>
+    <script src="https://d3js.org/d3-color.v1.min.js"></script>
+    <script src="https://d3js.org/d3-format.v1.min.js"></script>
+    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+    <script src="https://d3js.org/d3-time.v1.min.js"></script>
+    <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
+    <script src="https://d3js.org/d3-scale.v1.min.js"></script>
+    <!-- d3 -->
     <!-- js -->
     <script src="static/colorbrewer/colorbrewer.js"></script>
     <script src="static/js/drawCytoscape.js"></script>
     <script src="static/js/contextualizeNodes.js"></script>
+    <script src="static/js/phosphoContext.js"></script>
     <script src="static/js/qtipNodes.js"></script>
     <script src="static/js/highlightPath.js"></script>
     <script src="static/js/requests_APIs.js"></script>
