Phosphocontext small nodes move with big nodes
- small nodes now move along with big nodes
- big nodes can be under a spring/force layout, however their grouping with
  small nodes must be under control of a layout designed for group nodes like
  cose

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="static/bower_components/cytoscape-panzoom/cytoscape-panzoom.js"></script>
     <script src="static/bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
     <script src="static/bower_components/papaparse/papaparse.js"></script>
+    <script src="static/bower_components/cytoscape-cose-bilkent/cytoscape-cose-bilkent.js"></script>
     <!-- endbower -->
     <!-- d3 -->
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -48,6 +49,7 @@
     <script src="static/js/drawCytoscape.js"></script>
     <script src="static/js/contextualizeNodes.js"></script>
     <script src="static/js/phosphoContext.js"></script>
+    <script src="static/js/phosphoContextSN.js"></script>
     <script src="static/js/qtipNodes.js"></script>
     <script src="static/js/highlightPath.js"></script>
     <script src="static/js/requests_APIs.js"></script>
