--- a/index.html
+++ b/index.html
@@ -200,6 +200,21 @@ TIAM activates RAC, which activates PAK.</textarea>
                                <input  id="scale_slider" type="text"
                                         data-provide="slider"
                                         data-slider-ticks="[3,4,5,6,7,8,9]"
+          <div class= 'btn-div'>
+              <div><b>NLP System</b></div>
+              <button id='parseReach' type="submit" class="btn btn-default parserSelect">REACH</button>
+              <button id='parseTrips' type="submit" class="btn btn-default parserSelect active">TRIPS</button>
+
+          </div>
+          <hr>
+          <div class= 'btn-div'>
+              <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
+              <button id='presetLayoutDynamic' type="submit" class="btn btn-default presetLayout active">Preset layout</button>
+
+          </div>
+          <div class='btn-div'>
+              <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
+              <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button>
 
                                         data-slider-min="1"
                                         data-slider-max="9"
