--- a/index.html
+++ b/index.html
@@ -119,56 +119,26 @@
                   </div>
 
                   <div id="byom" class="tab-pane fade in">
-                      <div>
-                        <h5>Input</h5>
-                        <form>
-                            <div class="form-group">
-                              <label for="textArea">Describe your mechanism.</label>
-                              <textarea class="form-control" id="textArea" rows="15" placeholder="">
-Growth-factor proteins activate EGFR, ERBB2 and FGFR.
-Growth-factor proteins activate PDGFR.
-Growth-factor proteins activate MET, ROS1 and ALK.
-EGFR, ERBB2, PDGFR, MET, ROS1, ALK and FGFR activate GRB2 and SHC.
-GRB2 and SHC activate RASGRF and SOS.
-GRB2 binds SHC.
-SOS and RASGRF activate HRAS, NRAS and KRAS.
-RASGRP activates HRAS, KRAS and NRAS.
-SPRY deactivates HRAS, KRAS and NRAS.
-RASA/ARHGAP35 deactivates HRAS, NRAS and KRAS.
-RASAL deactivates HRAS, NRAS and KRAS.
-NF1/SPRED deactivates HRAS, NRAS and KRAS.
-RASA/ARHGAP35 deactivates RHOA, RHOB and RHOC.
-RASAL deactivates RHOA, RHOB and RHOC.
-NF1/SPRED deactivates RHOA, RHOB and RHOC.
-HRAS, NRAS and KRAS activate RALGDS.
-RALGDS activates RALA and RALB.
-HRAS, NRAS and KRAS activate ARAF, BRAF and RAF1.
-ARAF, BRAF and RAF1 activate MAP2K1 and MAP2K2.
-MAP2K1 and MAP2K2 activate MAPK1 and MAPK3.
-MAPK1 and MAPK3 activate ETS, JUN and FOS.
-KSR binds ARAF, BRAF and RAF1.
-KSR binds MAP2K1 and MAP2K2.
-KSR binds MAPK1 and MAPK3.
-ETS, FOS and JUN activate MDM2, CCND1 and DUSP.
-MDM2 deactivates TP53.
-CCND1 activates CDK4 and CDK6, which deactivate RB1.
-DUSP deactivates MAPK1 and MAPK3.
-SOS and RASGRF activate RHOA, RHOB and RHOC.
-RHOA, RHOB and RHOC activate ROCK1 and ROCK2.
-HRAS, NRAS and KRAS activate PIK3C and PIK3R.
-PIK3C and PIK3R activate PIP3.
-PTEN deactivates PIP3.
-PIP3 activates PDPK1, AKT and TIAM.
-PDPK1 activates AKT.
-AKT deactivates TSC1/TSC2.
-TSC1/TSC2 deactivates RHEB.
-RHEB activates mTORC2.
-STK11 activates PRKAA, PRKAB and PRKAG.
-PRKAA, PRKAB and PRKAG deactivate mTORC2.
-mTORC2 deactivates EIF4EBP1.
-mTORC2 activates RPS6KA.
-TIAM activates RAC, which activates PAK.</textarea>
-                            </div>
+    <br>
+    <div>
+      <form>
+          <div class="form-group">
+            <label for="textArea">Describe your mechanism.</label>
+            <textarea class="form-control" id="textArea" rows="15">
+Active ATM phosphorylates ATM, and phosphorylated ATM is active.
+Active ATM activates p53.
+p53 is transcribed and active p53 transcribes MDM2.
+MDM2 is degraded.
+Active p53 activates Wip1.
+Active Wip1 inactivates p53.
+Active Wip1 dephosphorylates ATM.
+MDM2 ubiquitinates p53 and ubiquitinated p53 is degraded.
+HIPK2 inactivates Wip1.
+
+            </textarea>
+          </div>
+
+       </form>
 
                          </form>
                             <div class= 'btn-div'>
